<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.healvimaginer.watchfilm.presentation.detail.tv.DetailsTvActivity">

    <ImageView
        android:id="@+id/imagetv"
        android:layout_width="201dp"
        android:layout_height="208dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/judul"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagetv"
        app:layout_constraintTop_toTopOf="@+id/imagetv" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/imagetv"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Naruto Shippuden" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/title_tv"
        app:layout_constraintStart_toEndOf="@+id/imagetv"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"
        android:text="@string/rilis" />

    <TextView
        android:id="@+id/rilis_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/imagetv"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="2020" />

    <TextView
        android:id="@+id/kreator_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagetv"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Masashi Kishimito" />

    <TextView
        android:id="@+id/texvisa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/status"
        app:layout_constraintEnd_toStartOf="@+id/txview"
        app:layout_constraintStart_toStartOf="@+id/imagetv"
        app:layout_constraintTop_toBottomOf="@+id/imagetv" />

    <TextView
        android:id="@+id/status_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/network_tv"
        app:layout_constraintStart_toStartOf="@+id/texvisa"
        app:layout_constraintTop_toBottomOf="@+id/texvisa"
        tools:text="12 Juta dollars" />

    <TextView
        android:id="@+id/txview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/kreator_tv"
        app:layout_constraintStart_toEndOf="@+id/imagetv"
        app:layout_constraintTop_toBottomOf="@+id/imagetv"
        android:text="@string/network" />

    <TextView
        android:id="@+id/network_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="@+id/txview"
        app:layout_constraintStart_toStartOf="@+id/txview"
        app:layout_constraintTop_toBottomOf="@+id/txview"
        tools:text="13 juta dolar" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/deskripsi"
        app:layout_constraintStart_toStartOf="@+id/imagetv"
        app:layout_constraintTop_toBottomOf="@+id/status_tv" />

    <TextView
        android:id="@+id/deskription_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:text="ini deskrisipn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kreator"
        app:layout_constraintEnd_toEndOf="@+id/rilis_tv"
        app:layout_constraintStart_toStartOf="@+id/rilis_tv"
        app:layout_constraintTop_toBottomOf="@+id/rilis_tv" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/favorite"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>