...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagefilm"
        app:layout_constraintTop_toTopOf="@+id/imagefilm" />

    <TextView
        android:id="@+id/title_film"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/imagefilm"
...
        app:layout_constraintEnd_toEndOf="@+id/title_film"
        app:layout_constraintStart_toEndOf="@+id/imagefilm"
        app:layout_constraintTop_toBottomOf="@+id/title_film"
        android:text="@string/rilis" />

    <TextView
        android:id="@+id/rilis_film"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/imagefilm"
...
