<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="filmsection">Film</string>
    <string name="tvsection">Tv Shows</string>
</resources>